...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OK4-FE-VB0">
                                                    <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                    <animations/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" secondItem="OK4-FE-VB0" secondAttribute="height" multiplier="1:1" id="EbC-tQ-91P"/>
                                                    </constraints>
                                                    <state key="normal" image="ButtonBomb">
                                                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                    <variation key="default">
                                                        <mask key="constraints">
                                                            <exclude reference="EbC-tQ-91P"/>
                                                        </mask>
...
                                <include reference="LV2-Ce-QTD"/>
                                <include reference="vps-yn-3bx"/>
                                <include reference="xft-oo-Wpd"/>
                            </mask>
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Browse" id="s5d-ss-Ynl">
                        <barButtonItem key="leftBarButtonItem" title="Logout" id="M5y-jW-pY6">
                            <connections>
                                <action selector="logoutButtonPressed:" destination="yyx-KU-9Yh" id="ZsO-mj-QSU"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                        <animations/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="80" id="dhr-G8-cJO"/>
                                            <constraint firstAttribute="width" constant="80" id="iDh-XB-CVL"/>
                                        </constraints>
                                        <state key="normal" image="ButtonNo">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="dhr-G8-cJO"/>
                                                <exclude reference="iDh-XB-CVL"/>
...
                                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                        <animations/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="80" id="LXd-E0-9lZ"/>
                                            <constraint firstAttribute="height" constant="80" id="fet-1V-zLj"/>
                                        </constraints>
                                        <state key="normal" image="ButtonHeartSelected">
                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                        </state>
                                        <variation key="default">
                                            <mask key="constraints">
                                                <exclude reference="LXd-E0-9lZ"/>
                                                <exclude reference="fet-1V-zLj"/>
...
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="9QZ-mR-ghS"/>
                                    <constraint firstAttribute="height" constant="50" id="Ydg-Eh-DL3"/>
                                </constraints>
                                <state key="normal" image="ButtonBack">
                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="9QZ-mR-ghS"/>
                                        <exclude reference="Ydg-Eh-DL3"/>
...
                                <rect key="frame" x="6" y="217" width="304" height="133"/>
                                <animations/>
                                <fontDescription key="fontDescription" name="WolfintheCity" family="Wolf in the City" pointSize="80"/>
                                <color key="textColor" red="1" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Boom" translatesAutoresizingMaskIntoConstraints="NO" id="ewB-2X-M0D">
                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                <animations/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ewB-2X-M0D" secondAttribute="height" multiplier="300:253" id="UHc-aH-b9p"/>
                                </constraints>
                                <variation key="default">
...
