...
                        <constraint firstAttribute="width" secondItem="rUy-uN-bxe" secondAttribute="height" multiplier="16:7" id="rgc-Nr-REQ"/>
                    </constraints>
                    <fontDescription key="fontDescription" name="WolfintheCity" family="Wolf in the City" pointSize="150"/>
                    <color key="textColor" red="1" green="0.0" blue="0.26666666666666666" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WAITING FOR" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1Py-PB-Bta">
                    <rect key="frame" x="79" y="163" width="158" height="31"/>
                    <fontDescription key="fontDescription" name="MarketDeco" family="Market Deco" pointSize="28"/>
                    <color key="textColor" red="1" green="0.0" blue="0.50588235294117645" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LinePink" translatesAutoresizingMaskIntoConstraints="NO" id="EGE-v5-Jj4">
                    <rect key="frame" x="122" y="209" width="72" height="3"/>
                </imageView>
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LinePink" translatesAutoresizingMaskIntoConstraints="NO" id="glY-nk-Y08">
                    <rect key="frame" x="126" y="370" width="72" height="3"/>
                </imageView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TO CONFIRM" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FkO-NM-sp8">
                    <rect key="frame" x="86" y="388" width="153" height="31"/>
                    <fontDescription key="fontDescription" name="MarketDeco" family="Market Deco" pointSize="28"/>
                    <color key="textColor" red="1" green="0.0" blue="0.50588235290000005" alpha="1" colorSpace="calibratedRGB"/>
                    <nil key="highlightedColor"/>
                </label>
                <label opaque="NO" userInteractionEnabled="NO" alpha="0.79999999999999982" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rebecca" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hIx-8Y-Xvx">
...
